Closed Bug 631406 Opened 15 years ago Closed 15 years ago

PeekOffsetNoAmount doesn't accept null as its second argument

Categories

(Core :: Layout, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b12

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

Details

(Keywords: assertion)

Attachments

(1 file, 1 obsolete file)

Calls to nsTextFrame::CheckVisibility cause nsTextFrame::PeekOffsetNoAmount to assert for no good reason because the second argument shouldn't be null...
I hit this assertion when I was working on bug 629878.
Attached patch Patch (v1) (obsolete) — Splinter Review
Assignee: nobody → ehsan
Status: NEW → ASSIGNED
Attachment #509640 - Flags: review?(roc)
Attachment #509640 - Flags: approval2.0?
Keywords: assertion
Attached patch Patch (v1)Splinter Review
(In reply to comment #3) > Is this the right patch? No! Sorry :-)
Attachment #509640 - Attachment is obsolete: true
Attachment #509646 - Flags: review?(roc)
Attachment #509646 - Flags: approval2.0?
Attachment #509640 - Flags: review?(roc)
Attachment #509640 - Flags: approval2.0?
Attachment #509646 - Flags: review?(roc)
Attachment #509646 - Flags: review+
Attachment #509646 - Flags: approval2.0?
Attachment #509646 - Flags: approval2.0+
Whiteboard: [needs landing]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: [needs landing]
Target Milestone: --- → mozilla2.0b12
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: