Bug 631406 - PeekOffsetNoAmount doesn't accept null as its second argument; r,a=roc