layout/generic/nsTextFrameThebes.cpp
@@ -5863,7 +5863,8 @@ nsTextFrame::CheckVisibility(nsPresContext* aContext, PRInt32 aStartIndex,
   // or one of its continuations.
   for (nsTextFrame* f = this; f;
        f = static_cast<nsTextFrame*>(GetNextContinuation())) {
-    if (f->PeekOffsetNoAmount(PR_TRUE, nsnull)) {
+    PRInt32 dummyOffset = 0;
+    if (f->PeekOffsetNoAmount(PR_TRUE, &dummyOffset)) {
       *aRetval = PR_TRUE;
       return NS_OK;
     }
